Adminer Next:
Fix edit multiple checked records
Recognize emails with name (sample: name <email@foo.com>)
Fix paginator page 1 (first) skin
Fix table pages top links (all pages, which related to selected table, has similar links)
Optimize referencable_primary() for MySQL
Remove duplicates of collation-lists on `Alter table` page. Require JavaScript on client side! But support "nojs=1" argument to use old method.
Add style chooser to select data export
Support export table rows without AI keys
Input binary UUID for MySQL
Output binary UUID in hex
Fix disabled <select> UI in Chrome
Add detect `SQL command` page when URL containt '&table=' (allow to use UX plugin sql_command_table_fields)
Support receive partial data for alter table (workaround for max_input_vars limit errors) (allow to use UX plugin table_edit_by_fields)
Add possibility to remove conditions in search by fields form
UX plugins for simpler migrate phpMyAdmin users:
 - tables_list_name_select:			table names in menu has link to `Select data`, and icons to `Show structure`
 - tables_list_filter:				table list in menu has filter field
 - duplicate_result_controls:		duplicate paginator before result table
 - frameset_simulator:				simulate frames in UI
 - disable_highlight:				disable code highlight
 - executed_query_output_modifier:	<code> text wrap + possibility to show full query + possibility to always show executed query
 - submit_at_right:					move `submit` buttons to the right
 - table_hscroll_followers:			do not scroll some page elements (pages list, SQL code,...) while horizontal scroll the page
 - sql_command_table_fields:		add table fields chooser on `SQL command` page
 - export_per_table:				copy "Export" link to table links list
 - table_structure_advanced:		display table status, table manipulations (+ table rename), export data and edit table controls on table structure page
 - table_edit_by_fields:			disable by default input fields on `Alter table` page, to reduce count of submitted values